--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 .App {
   text-align: center;
-  font-family: "Didact Gothic", sans-serif;
+  font-family: "Didact Gothic", serif;
   display: flex;
   width: 100vw;
   align-content: center;
@@ -14,6 +14,7 @@ label {
 .search-bar {
   width: 100%;
   display: flex;
+  justify-content: space-between;
 }
 
 .result {
